more easy java 8 backwards compat