@@ -41,6 +41,7 @@ import com.composum.ai.backend.base.service.chat.GPTChatCompletionService;
 import com.composum.ai.backend.slingbase.ApproximateMarkdownService;
 import com.composum.ai.backend.slingbase.ApproximateMarkdownServicePlugin;
 import com.composum.ai.backend.slingbase.ApproximateMarkdownServicePlugin.PluginResult;
+import com.google.common.collect.ImmutableMap;
 
 /**
  * Implementation for {@link ApproximateMarkdownService}.
@@ -49,7 +50,7 @@ import com.composum.ai.backend.slingbase.ApproximateMarkdownServicePlugin.Plugin
 @Designate(ocd = ApproximateMarkdownServiceImpl.Config.class)
 public class ApproximateMarkdownServiceImpl implements ApproximateMarkdownService {
 
-    public static final Map<String, String> ATTRIBUTE_TO_MARKDOWN_PREFIX = Map.of(
+    public static final Map<String, String> ATTRIBUTE_TO_MARKDOWN_PREFIX = ImmutableMap.of(
             "jcr:title", "## ",
             "title", "## ",
             "subtitle", "### ",
@@ -350,6 +351,7 @@ public class ApproximateMarkdownServiceImpl implements ApproximateMarkdownServic
     }
 
     protected void captureHtmlTags(String value) {
+
         PATTERN_HTML_TAG.matcher(value).results()
                 .map(matchResult -> matchResult.group(1))
                 .forEach(htmltags::add);
